[gd_scene load_steps=6 format=3 uid="uid://njg1sxj4y3lf"]

[ext_resource type="Script" uid="uid://jbpo4a2h0eun" path="res://scripts/game_menu_screen.gd" id="1_kv44u"]
[ext_resource type="PackedScene" uid="uid://bik8f3tvw4252" path="res://scenes/UI/GameBackgroundScene.tscn" id="2_isfb2"]
[ext_resource type="FontFile" uid="uid://8jdtoki7rvj3" path="res://font/Comic_Neue/ComicNeue-Bold.ttf" id="3_25th1"]
[ext_resource type="AudioStream" uid="uid://c4yqob801jchj" path="res://assets/Music/daisy bell.mp3" id="3_isfb2"]
[ext_resource type="FontFile" uid="uid://bkfsc2nxl1xi5" path="res://font/Comic_Neue/ComicNeue-Regular.ttf" id="4_5ivsh"]

[node name="GameMenuScreen" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_kv44u")

[node name="GameMenuScreenBackground" parent="." instance=ExtResource("2_isfb2")]

[node name="MarginContainer2" type="MarginContainer" parent="."]
offset_left = 290.0
offset_top = 256.0
offset_right = 1590.0
offset_bottom = 856.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50

[node name="Label" type="RichTextLabel" parent="MarginContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0.564706, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_offset_x = 5
theme_override_fonts/normal_font = ExtResource("3_25th1")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[font_size=100]Paracosm
"
fit_content = true
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="StartGameButton" type="Button" parent="MarginContainer2/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("4_5ivsh")
theme_override_font_sizes/font_size = 40
text = "START"

[node name="SaveGameButton" type="Button" parent="MarginContainer2/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("4_5ivsh")
theme_override_font_sizes/font_size = 40
text = "LOAD"

[node name="ExitGameButton" type="Button" parent="MarginContainer2/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("4_5ivsh")
theme_override_font_sizes/font_size = 40
text = "QUIT"

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_isfb2")
volume_db = -10.0

[connection signal="pressed" from="MarginContainer2/VBoxContainer2/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer2/VBoxContainer/SaveGameButton" to="." method="_on_save_game_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer2/VBoxContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
